# epr-data-automation

./: .envrc  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
config/environments/: .env.dev15  .env.tst1
scripts/: setup.sh
src/eprda/: logging.py
src/eprda/cli/: create_org_file.py  create_pom_file.py  dp_complete_registration_submission.py  dp_enrolment.py  dp_registration_submission.py  dp_report_packaging_data.py  regulator_accept_registration_submission.py
src/eprda/clients/: companies_house.py  notifications_client.py
src/eprda/config/: config.py  config_loader.py  settings.py
src/eprda/flows/: dp_enrolment_flow.py  dp_registration_submission_flow.py  dp_report_packaging_data_flow.py
src/eprda/ui/: browser.py
src/eprda/ui/pages/: base_page.py  create_account_page.py  direct_producer_dashboard_page.py  registration_page.py  regulator_home_page.py  report_packaging_data_page.py  signin_page.py
src/eprda/utils/: __init__.py  csv_factory.py  file_util.py
templates/: org-file-template.csv  pom-file-template.csv
tests/: conftest.py
tests/data/: test_joiners_report.py
tests/fixtures/: browser_fixture.py
tests/ui/: test_signin.py
